Fixed issue caused by  afbdb3ed which removed z-index which is required for tab views.

--- a/frameworks/desktop/resources/tab.css
+++ b/frameworks/desktop/resources/tab.css
@@ -5,3 +5,7 @@
   border-radius: 2px;
   overflow: visible;
 }
+
+.sc-tab-view .sc-segmented-view {
+  z-index: 1;
+}
